--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   font-size: 1.5rem;
   color: #ffc700;
 ">
-  ⚠️INGAT KESEHATAN KITA! 
+  ⚠️INGAT KESEPAKATAN KITA! 
 </div>
 <footer style="
   position: fixed;
